# murano-dashboard

./: .coveragerc  .eslintrc  .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  babel-django.cfg  babel-djangojs.cfg  common.inc  karma.conf.js  lower-constraints.txt  manage.py  openstack-common.conf  package.json  prepare_murano.sh  requirements.txt  run_tests.sh  setup-centos.sh  setup.cfg  setup.py  setup.sh  test-requirements.txt  tox.ini  update_setting.sh
build_addons/rpm/: modify-horizon-config.sh  murano-dashboard-0.4.spec  spec.template
doc/source/: conf.py  index.rst
functional_tests/: collect_results.sh  env_pkg_prepare.sh  generate_html_report.py  post_test_hook.sh  pre_test_hook.sh  run_test.sh
functional_tests/templates/: empty.template  report.template
functionaltests/: base.py  common.ini  consts.py  sanity_check.py  utils.py
functionaltests/MockApp/: manifest.yaml
functionaltests/config/: config.py  config_file.conf
glazierdashboard/tabula/: tables.py
muranodashboard/: client_overrides.py  dashboard.py  datagrids.py  exceptions.py  middleware.py  models.py  settings.py  utils.py  version.py  views.py
muranodashboard/api/: __init__.py  packages.py
muranodashboard/catalog/: __init__.py  forms.py  image.py  models.py  panel.py  tabs.py  urls.py  views.py  workflows.py
muranodashboard/categories/: forms.py  panel.py  tables.py  urls.py  views.py
muranodashboard/common/: cache.py  designate.py  fields.py  net.py  utils.py  widgets.py
muranodashboard/conf/: murano_policy.json
muranodashboard/dynamic_ui/: fields.py  forms.py  helpers.py  metadata.py  services.py  version.py  yaql_expression.py  yaql_functions.py
muranodashboard/environments/: api.py  consts.py  format.py  forms.py  network.py  panel.py  tables.py  tabs.py  topology.py  urls.py  views.py  workflows.py
muranodashboard/image_cache/: cache.py
muranodashboard/images/: forms.py  panel.py  tables.py  urls.py  views.py
muranodashboard/local/: _50_murano.py  local_settings.py.example
muranodashboard/locale/: django.pot  djangojs.pot
muranodashboard/panel/: api.py  consts.py  forms.py  overrides.py  panel.py  tables.py  tabs.py  urls.py  views.py  workflows.py
muranodashboard/service_catalog/: forms.py  panel.py  tables.py  urls.py  utils.py  views.py  workflows.py
muranodashboard/services/: ActiveDirectory.yaml  AspNetApp.yaml  AspNetAppFarm.yaml  Demo.yaml  LinuxApache.yaml  LinuxTelnet.yaml  MsSqlClusterServer.yaml  MsSqlServer.yaml  WebServer.yaml  WebServerFarm.yaml
muranodashboard/services3/: Demo.yaml  WebServer.yaml
muranodashboard/services5/: ActiveDirectory.yaml  AspNetApp.yaml  Demo.yaml  LinuxTelnet.yaml
muranodashboard/stats/: models.py  panel.py  tabs.py  urls.py  views.py
muranodashboard/templates/: _create_service_wizard.html  _deployment_reports_page_header.html  _horizon_form_fields.html  _service_detail_page_header.html  _services.html  _services_page_header.html  _services_tabs.html  create_dc.html  create_service_wizard.html  data_grid_field.html  deployment_reports.html  deployments.html  murano_base.html  service_details.html  services.html
muranodashboard/templatetags/: __init__.py  custom_filters.py  jsonify.py
muranodashboard/test/: settings.py  test_fields.py  test_tabs.py  (+1 more)
tabula/: settings.py
tools/: cover.sh  install_venv.py  install_venv_common.py  pip-requires  post_install.sh  rfc.sh
(+286 files in other folders)
